Small fixes to font weights to improve readability.

--- a/Resources/public/css/main.css
+++ b/Resources/public/css/main.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    font-weight: 300;
+    font-weight: 400;
     color: #565859;
 }
 
